chore(docs): updated readme